--- a/01client/01wx/pages/index/index.wxss
+++ b/01client/01wx/pages/index/index.wxss
@@ -1,21 +1,80 @@
-/**index.wxss**/
-.userinfo {
+.page {
+  margin-left: 10rpx;
+  margin-right: 10rpx;
+}
+.nav{
+  flex: 1;
+  padding: 10rpx;
+}
+.nav .img{
+  width: 100%;
+  height: 400rpx;
+}
+
+.swiper-tab {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  line-height: 80rpx;
+  border-bottom: 4rpx solid #f0f2f7;
+}
+
+.tab-item {
+  width: 50%;
+  text-align: center;
+  font-size: 15px;
+  color: #777;
+}
+
+.swiper {
+  height: 600px;
+}
+
+.title {
+  color: #bcbcbc;
+  font-size: 31rpx;
+}
+
+.titleSelet {
+  color: #171717;
+  font-size: 36rpx;
+  border-bottom: 5rpx solid #2066ff;
+}
+
+.content{
+  width: 100%;
+  height: 300rpx;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
+  margin-bottom: 20rpx;
+   border-bottom: 4rpx solid #f0f2f7;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.textbook{
+  width: 55%;
+  height: 220rpx;
+  display: flex; 
+		flex-direction: column; 
+		justify-content: space-between; 
+		align-items: center; 
+    
 }
-
-.userinfo-nickname {
-  color: #aaa;
+.txtTop{
+  width: 400rpx;
+  height: 180rpx;
+  font-weight: bold;
+  font-size: 32rpx;
+  color: #272727;
 }
-
-.usermotto {
-  margin-top: 200px;
+.txtBottom{
+  width: 400rpx;
+  height: 50rpx;
+  font-size: 28rpx;
+  color: #9B9B9B;
+  line-height: 50rpx;
+ 
+}
+.img{
+  width: 35%;
+  height: 200rpx;
 }
