--- a/01client/01wx/pages/video/video.wxss
+++ b/01client/01wx/pages/video/video.wxss
@@ -14,7 +14,9 @@
 }
 
 .guideBar {
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .guideBarPic {
@@ -38,10 +40,15 @@
   box-shadow: 10rpx 10rpx 10rpx #e3e4e8;
 }
 
+.guideText{
+  font-size: 30rpx;
+  color: #999;
+  margin-top: 10rpx;
+}
+
 .title {
-  font-size: 50rpx;
-  margin-bottom: 25rpx;
-  color: orangered;
+  font-size: 35rpx;
+  margin: 25rpx 0;
 }
 
 .head {
